simplifed sparkles fixed white space added tap here

--- a/source/styles.scss
+++ b/source/styles.scss
@@ -20,6 +20,10 @@ a {
   text-decoration: none;
 }
 
+a:visited {
+  color: #0e63a8;
+}
+
 $myfont: "salsa", cursive;
 $myShadow: 0px 7px 67px 0px rgba(0, 0, 0, 0.75);
 
@@ -41,93 +45,42 @@ $myShadow: 0px 7px 67px 0px rgba(0, 0, 0, 0.75);
 }
 
 // splash page
-.waffle {
+.splash{
+  position: relative;
+  margin: 20px auto;
+  // padding: 8px;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   font-family: $myfont;
-  position: relative;
-  margin-top: 100px;
-  .pic {
-    position: relative;
-    display: flex;
-    align-items: center;
+  font-size: 4rem;
+  z-index: 3;
 
-    .left-image,
-    .right-image {
-      max-width: 500px;
-      max-height: 500px;
-      position: absolute;
-      z-index: 0;
-      opacity: 0;
-    }
-    .left-image {
-      animation-delay: 0.5s;
-      left: -200px;
-      animation: slide-in-left 1s forwards;
-    }
-    .right-image {
-      animation-delay: 0.5s;
-      right: -100px;
-      bottom: -150px;
-      animation: slide-in-right 1s forwards;
-    }
-    .punch {
-      transition: color 0.7s ease, transform 0.7s ease;
-      position: relative;
-      z-index: 1;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      margin: 0;
-      h1 {
-        font-size: 10rem;
-        transform: rotate(-10deg);
-        margin: 0;
-        opacity: 0;
-        animation: fade-in 0.5s forwards;
-      }
-      #tap {
-        display: none;
-        letter-spacing: .5em;
-      }
-    }
+  h1 {
+    margin: 0 auto;
+  }
+  h2 {
+    margin: 0 auto;
+  }
+  p {
+    text-align: center;
   }
 }
 
+.splash:hover {
+  cursor: pointer;
+  color: #ef43f8;
+  transform: translateY(-4px);
+  transition: color .5s ease, transform .5s ease;
+}
 
 #countdown {
-  position: absolute;
-  margin-top: 30%;
-  left: 50%;
-  transform: translateX(-60%);
+  font-family: $myfont;
   font-size: 2rem;
   color: #0e63a8;
 }
 
-.punch:hover {
-  cursor: pointer;
-  color: #0e63a8;
-  transform: translateY(-10px);
-}
-.leave-left,
-.leave-right {
-  max-width: 500px;
-  max-height: 500px;
-  position: absolute;
-  z-index: 0;
-}
-
-.leave-left {
-  left: -200px;
-  animation: fade-out-left 1s forwards;
-}
-
-.leave-right {
-  right: -100px;
-  bottom: -150px;
-  animation: fade-out-right 1s forwards;
-}
 
 .sparkle1 {
   position: absolute;
@@ -135,7 +88,7 @@ $myShadow: 0px 7px 67px 0px rgba(0, 0, 0, 0.75);
   height: 10px;
   background-color: rgba(255, 255, 255, 0.8);
   border-radius: 50%;
-  animation: sparkle 5s infinite;
+  animation: sparkle 2s infinite;
   z-index: 1;
 }
 .sparkle2 {
@@ -144,7 +97,7 @@ $myShadow: 0px 7px 67px 0px rgba(0, 0, 0, 0.75);
   height: 10px;
   background-color: rgba(255, 255, 255, 0.8);
   border-radius: 50%;
-  animation: sparkle 3s infinite;
+  animation: sparkle 5s infinite;
   z-index: 1;
 }
 
@@ -155,6 +108,7 @@ $myShadow: 0px 7px 67px 0px rgba(0, 0, 0, 0.75);
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: rgba(0, 0, 128, 0.5);
   border: black solid 2px;
   border-radius: 8px;
   box-shadow: $myShadow;
@@ -278,7 +232,6 @@ $myShadow: 0px 7px 67px 0px rgba(0, 0, 0, 0.75);
   h1 {
     font-size: 4rem;
     letter-spacing: 6px;
-    text-decoration: underline;
     text-align: center;
   }
 
@@ -286,6 +239,7 @@ $myShadow: 0px 7px 67px 0px rgba(0, 0, 0, 0.75);
     font-size: 2rem;
     font-style: italic;
     text-align: center;
+    letter-spacing: .2em;
   }
 }
 .info {
@@ -640,32 +594,9 @@ input[type="email"] textarea {
     font-size: 14px;
   }
 
-  .waffle {
-    margin-top: 100px;
-  }
-
-  .pic {
-    .left-image,
-    .right-image {
-      display: none;
-    }
-  }
-
   #countdown {
     padding-top: 50px;
     text-align: center;
-  }
-
-
-  #punchText,
-  #brunchText {
-    font-size: 3rem;
-
-    a{ 
-      text-decoration: none;
-      color: inherit;
-      font-family: $myfont;
-    }
   }
 
   // home media queries
